Add missing include

BUG: 459857

CCMAIL: montel@kde.org